modify convertors entity <--> boundary